
message TestConnect
{
    required bytes RequestToken = 1;
    required int64 Time = 2;
}

message TestConnectResponse
{
    required bytes ResponseToken = 1;
}

message CloseRequest
{
    required bytes RequestToken = 1;
}

message CloseResponse
{
    required bytes ResponseToken = 1;
}

message ServerToken
{
    required bytes Id = 1;
    required bytes RequestToken = 2;
}

message ServerTokenVerify
{
    required bytes ResponseToken = 1;
}

message MessageTarget
{
    required int32 World = 2;
    required int32 Scene = 3;
}

message StringMessage
{
    required MessageTarget Target = 1;
    required string Content = 2;
}

message KeepAlive
{
}